Correctly define SQLite3 for apt

--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:bullseye-slim
 
 MAINTAINER KJP12
 
-RUN apt-get -y update && apt-get install -y --no-install-recommends @OPENJDK@ libjemalloc2 curl openssl git tar sqlite\
+RUN apt-get -y update && apt-get install -y --no-install-recommends @OPENJDK@ libjemalloc2 curl openssl git tar sqlite3\
     && apt-get -y clean && rm -rf /var/lib/apt/lists/* /usr/share/doc /usr/share/man /usr/lib/jvm/java*/docs /usr/lib/jvm/java*/man &&\
     useradd -md /home/container container
 
