Revert trying to make Docker take a file in the parent directory

--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -12,6 +12,6 @@ ENV USER=container HOME=/home/container LD_PRELOAD=/usr/lib/x86_64-linux-gnu/lib
 
 WORKDIR /home/container
 
-COPY ./../entrypoint.sh /entrypoint.sh
+COPY ./entrypoint.sh /entrypoint.sh
 
 CMD ["/bin/bash", "/entrypoint.sh"]
